<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.felseje</groupId>
    <artifactId>cpf-cnpj-utils</artifactId>
    <version>1.0.0-alpha</version>
    <packaging>jar</packaging>
    <name>CpfCnpjUtils</name>
    <description>
        A minimal Java library to generate and validate Brazilian CPF and CNPJ
        (supporting both numeric and alphanumeric formats). Lightweight and dependency-free.
        Keywords: cpf, cnpj, validation, brazil, alphanumeric, document, utils.
    </description>
    <url>https://github.com/felseje/cpf-cnpj-utils</url>
    <organization>
        <name>Felseje</name>
        <url>https://github.com/felseje</url>
    </organization>
    <licenses>
        <license>
            <name>BSD 3-Clause License</name>
            <url>https://opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>felseje</id>
            <name>Felseje</name>
            <url>https://github.com/felseje</url>
            <email>felseje@hotmail.com</email>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/felseje/cpf-cnpj-utils</url>
        <connection>scm:git:https://github.com/felseje/cpf-cnpj-utils.git</connection>
        <developerConnection>scm:git:git@github.com:felseje/cpf-cnpj-utils.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <java.version>17</java.version>
        <project.encoding>UTF-8</project.encoding>
        <junit.version>5.12.2</junit.version>
        <junit.platform.version>1.12.2</junit.platform.version>
        <mockito.version>5.17.0</mockito.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.gpg.plugin.version>3.2.7</maven.gpg.plugin.version>
        <maven.deploy.plugin.version>3.1.4</maven.deploy.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
        <maven.resource.plugin.version>3.3.1</maven.resource.plugin.version>
        <maven.surefire.plugin.version>3.5.3</maven.surefire.plugin.version>
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resource.plugin.version}</version>
                <configuration>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central.publishing.maven.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>false</autoPublish>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <failIfNoTests>true</failIfNoTests>
                    <useModulePath>true</useModulePath>
                    <argLine>
                        --add-opens cpf.cnpj.utils/io.github.felseje.cpf=org.junit.platform.commons
                        --add-opens cpf.cnpj.utils/io.github.felseje.cpf.exception=org.junit.platform.commons
                        --add-opens cpf.cnpj.utils/io.github.felseje.cnpj=org.junit.platform.commons
                        --add-opens cpf.cnpj.utils/io.github.felseje.cnpj.exception=org.junit.platform.commons
                        --add-opens cpf.cnpj.utils/io.github.felseje.exception=org.junit.platform.commons
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${project.encoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>